# platforms-framework

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
code/game/: CMakeLists.txt
code/game/core/: CMakeLists.txt  main.cpp
libraries/glfw/: CMakeLists.txt
libraries/glfw/examples/: CMakeLists.txt  triangle-opengl.cpp
libraries/glfw/include/GLFW/: glfw3.h
libraries/glfw/src/: CMakeLists.txt  context.c  init.c  platform.h  win32_window.c
libraries/glfw/tests/: CMakeLists.txt  clipboard.c  cursor.c  msaa.c  title.c  title.cpp
modules/: CMakeLists.txt
