#=======================================================================================================================
target_link_libraries(${PROJECT_NAME} PRIVATE platforms-module)
       target_sources(${PROJECT_NAME} PRIVATE main.cpp)
#=======================================================================================================================